--- a/main/static/css/main.css
+++ b/main/static/css/main.css
@@ -29,45 +29,23 @@ header {
     font-weight: bold;
 }
 
-.header__search {
-    display: flex;
-    gap: 15px;
-    align-items: center;
-}
-
-.header__search input {
-    padding: 8px 12px 8px 40px;
-    width: 400px;
-    background: white;
-    border: 1px solid #a7acb1;
-    border-radius: 4px;
-    color: #6d7175;
-    font-size: 15px;
-}
-
 .header__user {
     display: flex;
-    gap: 20px;
+    gap: 15px;
     justify-content: flex-end;
     align-items: center;
+    color: white;
+    font-size: 24px;
 }
 
-.header__user-photo {
-    height: 45px;
-    width: 45px;
-    background: white;
-    border-radius: 50%;
+.header__user-exit {
+    height: 70px;
+    width: 40px;
 }
 
-.header__user-photo img {
+.header__user-exit img {
     height: 100%;
     width: 100%;
-    border-radius: 50%;
-}
-
-.header__user-name {
-    color: white;
-    font-size: 19px;
 }
 
 nav {
