--- a/main/templates/add_book.html
+++ b/main/templates/add_book.html
@@ -12,7 +12,7 @@
 
 {% block main %}
     <div class="main">
-		<form action="" method="POST" enctype="multipart/form-data">
+		<form action="" method="POST" enctype="multipart/form-data" class="add_book_form">
         	{% csrf_token %}
 			<div class="tables">
 				<table>
@@ -27,23 +27,25 @@
 						{% endif %}
 					</tr>
 					<tr>
-						<td><b>Наименование книги</b></td>
+						<td><b>Наименование книги*</b></td>
 						<td>
-							<div class="name_inputs">
+							<div class="book_inputs">
 								<input type="text" name="russian_title" placeholder="На русском языке*" required>
 								<input type="text" name="original_title" placeholder="На языке оригинала">
 							</div>
 						</td>
 					</tr>
 					<tr>
-						<td><b>Фотографии обложки книги</b></td>
+						<td><b>Фотографии обложки книги*</b></td>
 						<td>
-							<input type="file" accept="image/*" name="book_photos" required>
-							<input type="file" accept="image/*" name="book_photos">
+							<div class="book_photos">
+								<input type="file" accept="image/*" name="book_photos" required>
+								<input type="file" accept="image/*" name="book_photos">
+							</div>
 						</td>
 					</tr>
 					<tr>
-						<td><b>Авторы</b></td>
+						<td><b>Авторы*</b></td>
 						<td>
 							<div class="authors">
 								<div class="first_author">
@@ -66,7 +68,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td><b>Жанры</b></td>
+						<td><b>Жанры*</b></td>
 						<td>
 							{% recursetree genres %}
 								<div class="filter__genre-list">
@@ -115,19 +117,19 @@
 				</table>
 				<table>
 					<tr>
-						<td><label for="price"><b>Стоимость</b></label></td>
+						<td><label for="price"><b>Стоимость*</b></label></td>
 						<td>
 							<input type="number" step="0.01" name="price" id="price" min="0.01" required>
 						</td>
 					</tr>
 					<tr>
-						<td><label for="price_per_day"><b>Цена за день использования</b></label></td>
+						<td><label for="price_per_day"><b>Цена за день использования*</b></label></td>
 						<td>
 							<input type="number" step="0.01" name="price_per_day" id="price_per_day" min="0.01" required>
 						</td>
 					</tr>
 					<tr>
-						<td><label for="instance_count"><b>Количество экземпляров</b></label></td>
+						<td><label for="instance_count"><b>Количество экземпляров*</b></label></td>
 						<td>
 							<input type="number" step="1" name="instance_count" id="instance_count" value="1" min="1" required>
 						</td>
