--- a/main/static/css/add_book.css
+++ b/main/static/css/add_book.css
@@ -1,3 +1,19 @@
+.header__search {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.header__search input {
+    padding: 8px 12px 8px 40px;
+    width: 400px;
+    background: white;
+    border: 1px solid #a7acb1;
+    border-radius: 4px;
+    color: #6d7175;
+    font-size: 15px;
+}
+
 .main {
     padding: 25px 40px 20px 40px;
 }
@@ -7,6 +23,13 @@
     gap: 10px;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.add_book_form h2 {
+    padding: 0px 0px 21px 0px;
+    color: #173F5F;
+    font-size: 40px;
+    font-weight: bold;
 }
 
 .errors {
