--- a/main/static/css/add_book_instance.css
+++ b/main/static/css/add_book_instance.css
@@ -1,3 +1,19 @@
+.header__search {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.header__search input {
+    padding: 8px 12px 8px 40px;
+    width: 400px;
+    background: white;
+    border: 1px solid #a7acb1;
+    border-radius: 4px;
+    color: #6d7175;
+    font-size: 15px;
+}
+
 .main {
     margin: 100px 0px 100px 0px;
     display: flex;
@@ -11,15 +27,18 @@
 }
 
 .add_book_instance {
-    padding: 30px 40px 30px 40px;
-    width: 550px;
+    padding: 60px 80px 60px 80px;
     background: white;
     border-radius: 10px;
     display: flex;
-    gap: 20px;
+    gap: 40px;
     flex-direction: column;
-    justify-content: space-around;
     text-align: left;
+}
+
+.add_book_instance h2 {
+    color: #173F5F;
+    font-size: 35px;
 }
 
 .add_book_instance tr {
