--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -35,12 +35,14 @@
         {% endif %}
     </header>
     <nav>
-        {% if user.is_authenticated %}
-            <a href="{% url 'main' %}">Главная</a>
-            <a href="{% url 'books' %}">Книги</a>
-            <a href="{% url 'readers' %}">Читатели</a>
-            <a href="#">Корзина</a>
-        {% endif %}
+        {% block navigator %}
+            {% if user.is_authenticated %}
+                <a href="{% url 'main' %}">Главная</a>
+                <a href="{% url 'books' %}">Книги</a>
+                <a href="{% url 'readers' %}">Читатели</a>
+                <a href="#">Корзина</a>
+            {% endif %}
+        {% endblock %}
     </nav>
     <main>
         {% block main %}
