--- a/main/templates/add_book.html
+++ b/main/templates/add_book.html
@@ -26,7 +26,7 @@
     <div class="main">
 		<form action="" method="POST" enctype="multipart/form-data" class="add_book_form">
         	{% csrf_token %}
-			<h2>Регистрация книги</h2>
+			<h2 class="add_book_form-title">Регистрация книги</h2>
 			<div class="tables">
 				<table>
 					<tr>
