--- a/users/static/css/readers.css
+++ b/users/static/css/readers.css
@@ -89,15 +89,19 @@ thead th:nth-child(2) {
 }
 
 thead th:nth-child(3) {
-    width: 20%;
+    width: 15%;
 }
 
 thead th:nth-child(4) {
-    width: 25%;
+    width: 20%;
 }
 
 thead th:nth-child(5) {
-    width: 25%;
+    width: 20%;
+}
+
+thead th:nth-child(6) {
+    width: 10%;
 }
 
 tbody {
@@ -123,6 +127,20 @@ tbody th:nth-child(1) {
 
 tbody th:nth-child(2) {
     text-align: left;
+}
+
+.view_button {
+    padding: 3px 5px 3px 5px;
+    background: white;
+    border: 2px solid #B0C4DE;
+    border-radius: 7px;
+    color: #173F5F;
+    font-size: 16px;
+}
+
+.view_button:hover {
+    background: #B0C4DE;
+    color: #173F5F;
 }
 
 .original_title {
@@ -157,6 +175,7 @@ tbody th:nth-child(2) {
 }
 
 .readers__not_found {
+    margin-top: 30px;
     display: flex;
     gap: 30px;
     flex-direction: column;
